chore: Regenerate API clients after audit event_type schema updates
Regenerates DataStorage and HolmesGPT API clients after OpenAPI schema
updates for audit event_type taxonomy corrections (BR-AUDIT-003).

Key Changes:

1. **DataStorage OpenAPI Schema** (data-storage-v1.yaml):
   - Updated audit event_type enum values to dot notation
   - Example: "remediation_approval_request.created"
   - Aligns with BR-AUDIT-003 taxonomy standards

2. **Go Client Regeneration** (ogen):
   - pkg/datastorage/ogen-client/*_gen.go (DataStorage client)
   - pkg/holmesgpt/client/*_gen.go (HAPI client)
   - Auto-generated from updated OpenAPI specs

3. **Python Client Regeneration**:
   - holmesgpt-api/src/clients/datastorage/datastorage/models/
   - audit_event.py and audit_event_request.py
   - Generated from updated DataStorage OpenAPI spec

4. **Embedded Spec Updates**:
   - pkg/datastorage/server/middleware/openapi_spec_data.yaml
   - Ensures runtime spec matches source of truth

Generation Commands:
- make generate (Go ogen clients)
- HAPI requirements.txt rebuild (Python client)

Related: BR-AUDIT-003

--- a/api/openapi/data-storage-v1.yaml
+++ b/api/openapi/data-storage-v1.yaml
@@ -1568,7 +1568,7 @@ components:
           type: string
           minLength: 1
           maxLength: 50
-          enum: [gateway, notification, analysis, aiagent, signalprocessing, workflow, workflowexecution, orchestration, webhook, approval]
+          enum: [gateway, notification, analysis, aiagent, signalprocessing, workflow, workflowexecution, orchestration, webhook]
           description: |
             Service-level event category (ADR-034 v1.7).
             Per ADR-034 v1.2: event_category MUST match the service name that emits the event.
