fix(e2e): Use hostPath for Notification file delivery volume
Root Cause (RCA):
- NT E2E deployment used emptyDir{} (ephemeral, pod-only)
- Tests expected files in host dir (GetE2EFileOutputDir)
- Files written to pod but NOT accessible from host

Impact:
- 4/4 file delivery E2E tests failed (BR-NOT-053 validation)
- All tests: "Should create at least one file" assertion failed

Fix:
- Changed notification-deployment.yaml volume from emptyDir to hostPath
- Path: /tmp/kubernaut-e2e-notifications (matches GetE2EFileOutputDir)
- type: DirectoryOrCreate (Kind will create if missing)

Validation:
- Files now written to shared hostPath (accessible to test runner)
- DD-NOT-002 V3.0: File-based E2E notification validation pattern

Business Requirements:
- BR-NOT-053: At-Least-Once Delivery validation
- DD-NOT-006: File delivery service for audit trails

Related:
- test/infrastructure/notification_e2e.go: GetE2EFileOutputDir()
- deploy/notification ConfigMap: file.outputDir: "/tmp/notifications"

--- a/test/e2e/notification/manifests/notification-deployment.yaml
+++ b/test/e2e/notification/manifests/notification-deployment.yaml
@@ -89,8 +89,10 @@ spec:
       - name: config
         configMap:
           name: notification-controller-config
-      # DD-NOT-006: File delivery output (emptyDir for E2E - ephemeral test data)
+      # DD-NOT-006: File delivery output (hostPath for E2E - accessible to host tests)
       - name: notification-output
-        emptyDir: {}  # Ephemeral volume for test notifications (security: no hostPath)
+        hostPath:
+          path: /tmp/kubernaut-e2e-notifications
+          type: DirectoryOrCreate
       terminationGracePeriodSeconds: 10
 
