perf(ci): Optimize Go lint to only scan core Go directories
Changed lint-go job to target specific directories instead of ./... pattern.

Before:
- Scanned ALL directories (./...)
- Included: docs/, deploy/, dependencies/, holmesgpt-api/, config/, migrations/, etc.
- Slower execution (~7-8 min timeout needed)

After:
- Scans ONLY: cmd/, pkg/, internal/, test/
- Skips non-Go directories: docs/, deploy/, dependencies/, config/, migrations/
- Faster execution (expected 3-5 min, kept 7m timeout for safety)

Command changed:
- Before: `make lint` → `golangci-lint run ./...`
- After: `bin/golangci-lint run cmd/... pkg/... internal/... test/...`

Impact:
- ✅ Faster lint execution (skip irrelevant directories)
- ✅ Same coverage for actual Go service code
- ✅ Reduced CI time for Stage 1

Note: holmesgpt-api/ intentionally excluded (Python-heavy, separate lint-python job)

--- a/.github/workflows/ci-pipeline.yml
+++ b/.github/workflows/ci-pipeline.yml
@@ -99,9 +99,9 @@ jobs:
 
       - name: Lint Go code
         run: |
-          echo "🔍 Linting Go code..."
+          echo "🔍 Linting Go code (targeted directories only)..."
           export PATH="${{ github.workspace }}/bin:$PATH"
-          timeout 7m make lint || echo "⚠️ Linting timed out or had issues (non-blocking)"
+          timeout 7m bin/golangci-lint run cmd/... pkg/... internal/... test/... || echo "⚠️ Linting timed out or had issues (non-blocking)"
         continue-on-error: true  # Don't block CI for lint warnings in V1.0
 
   lint-python:
