fix(e2e): Preserve Kind clusters in CI/CD for must-gather + fix namespace conflicts
Fixes 3 critical E2E infrastructure issues preventing must-gather collection
and causing namespace conflicts in GitHub Actions workflows.

1. Must-gather preservation (datastorage.go):
   - Skip cluster deletion in CI/CD (IMAGE_REGISTRY set) when tests fail
   - Allows GitHub Actions to collect pod logs, events, and status
   - Local mode still exports logs immediately for debugging

2. WorkflowExecution namespace conflict (workflowexecution_e2e_hybrid.go):
   - Handle AlreadyExists errors gracefully (idempotent namespace creation)
   - Fixed in 2 locations: cluster setup and controller deployment
   - Add strings import for error message checking

3. Test Suite Summary syntax (ci-pipeline.yml):
   - Add shopt -s nullglob to handle missing coverage files
   - Prevents bash syntax error when coverage-reports/*.txt matches nothing

Validated: WorkflowExecution E2E passed locally (12/12 specs, 7m51s)

Related GitHub Actions failures: workflow runs 21674305940, 21675588423
RCA documented in: docs/handoff/E2E_FAILURES_COMPLETE_ANALYSIS_FEB_04_2026.md

--- a/.github/workflows/ci-pipeline.yml
+++ b/.github/workflows/ci-pipeline.yml
@@ -805,11 +805,13 @@ jobs:
             ls -la coverage-reports/ || echo "No coverage-reports directory"
             echo ""
             echo "📋 Coverage file contents:"
-            for f in coverage-reports/*.txt 2>/dev/null; do
+            shopt -s nullglob  # Handle case when no files match (prevents literal *.txt)
+            for f in coverage-reports/*.txt; do
               if [ -f "$f" ]; then
                 echo "  File: $(basename $f) -> Content: $(cat $f)"
               fi
             done
+            shopt -u nullglob
             echo ""
           else
             echo "⚠️  No coverage-reports directory found"
