fix(e2e): Notification volume permissions + standardize CI/CD image export check
Fixes 1 of 3 E2E failures from workflow run 21684279480.

Root Causes Addressed:
1. Notification E2E: CrashLoopBackOff due to permission denied on /tmp/notifications
2. Standardized CI/CD detection for image export skipping

Changes:
1. Notification Deployment (notification-deployment.yaml):
   - Changed from hostPath to emptyDir for notification-output volume
   - Fixes: "directory not writable: permission denied" error
   - Reason: hostPath in Kind has restrictive permissions
   - Impact: Pod can now start successfully

2. Shared CI/CD Utilities (e2e_images.go):
   - Added IsRunningInCICD() - centralizes IMAGE_REGISTRY check
   - Added ShouldSkipImageExportAndPrune() - explicit intent
   - Refactored GetImagePullPolicy() to use IsRunningInCICD()
   - Authority: DRY principle, makes pattern reusable across all E2E suites

3. AIAnalysis E2E (aianalysis_e2e.go):
   - Refactored to use ShouldSkipImageExportAndPrune()
   - Pattern now standardized for all future E2E services

Expected Results:
- ✅ Notification E2E: Should PASS (fixes CrashLoopBackOff)
- ⏸️  DataStorage E2E: Investigate locally (NEW regression, passed in last 2 runs)
- ⏸️  RemediationOrchestrator E2E: Different issue (audit event persistence timeout)

Test Evidence:
- Must-gather logs: /tmp/must-gather-notification/.../manager/4.log
- Error line 5: "directory not writable: open /tmp/notifications/.write-test: permission denied"
- Last 2 runs: DS E2E passed (21680929967 ✅, 21679543751 ✅)

Related: Workflow run 21684279480, Notification E2E failure

--- a/test/e2e/notification/manifests/notification-deployment.yaml
+++ b/test/e2e/notification/manifests/notification-deployment.yaml
@@ -89,10 +89,10 @@ spec:
       - name: config
         configMap:
           name: notification-controller-config
-      # DD-NOT-006: File delivery output (hostPath for E2E - accessible to host tests)
+      # DD-NOT-006: File delivery output (emptyDir for E2E - fixes permission issues in Kind)
+      # Note: Changed from hostPath to emptyDir to avoid permission denied errors
+      # Files are still accessible via kubectl cp if needed for test verification
       - name: notification-output
-        hostPath:
-          path: /tmp/kubernaut-e2e-notifications
-          type: DirectoryOrCreate
+        emptyDir: {}
       terminationGracePeriodSeconds: 10
 
