--- a/test/e2e/notification/manifests/notification-deployment.yaml
+++ b/test/e2e/notification/manifests/notification-deployment.yaml
@@ -89,10 +89,13 @@ spec:
       - name: config
         configMap:
           name: notification-controller-config
-      # DD-NOT-006: File delivery output (emptyDir for E2E - fixes permission issues in Kind)
-      # Note: Changed from hostPath to emptyDir to avoid permission denied errors
-      # Files are still accessible via kubectl cp if needed for test verification
+      # DD-NOT-006: File delivery output (hostPath matches Kind extraMount)
+      # Authority: Kind extraMount at /tmp/e2e-notifications (notification_e2e.go:120)
+      # This path has correct permissions from extraMount - no permission issues
+      # Works identically in local and CI/CD environments
       - name: notification-output
-        emptyDir: {}
+        hostPath:
+          path: /tmp/e2e-notifications
+          type: DirectoryOrCreate
       terminationGracePeriodSeconds: 10
 
