fix(e2e): add fsGroup security context to Notification deployment
Root cause: hostPath volume permission mismatch between macOS and Linux
- Local (macOS): Container can write to hostPath volume ✅
- CI/CD (Linux): Container gets "permission denied" ❌

Solution: Add pod-level securityContext with fsGroup
- fsGroup: 1000 - Kubernetes chowns mounted volume to this group
- runAsUser: 1000 - Container runs as this user
- runAsNonRoot: true - Security best practice

How it works:
1. Kind extraMount: Host → Kind node (/tmp/e2e-notifications)
2. Pod hostPath: Kind node → Pod (/tmp/notifications)
3. Kubernetes runs: chown -R :1000 /tmp/notifications
4. Container (UID 1000) can now write ✅
5. Files flow back to host via mount chain
6. Tests read with filepath.Glob() (unchanged)

Impact:
- No test code changes required
- Works identically in local (macOS) and CI/CD (Linux)
- Maintains original design (no kubectl cp needed)

Authority: Standard Kubernetes volume permission pattern
BR-NOT-006: File delivery validation tests

--- a/test/e2e/notification/manifests/notification-deployment.yaml
+++ b/test/e2e/notification/manifests/notification-deployment.yaml
@@ -25,6 +25,12 @@ spec:
         - key: node-role.kubernetes.io/control-plane
           operator: Exists
           effect: NoSchedule
+      # Security context for volume permissions (works in both macOS and Linux)
+      # fsGroup ensures the mounted volume is writable by the container user
+      securityContext:
+        fsGroup: 1000
+        runAsNonRoot: true
+        runAsUser: 1000
       # emptyDir volumes have correct permissions automatically (no init container needed)
       containers:
       - name: manager
