fix(ci): Handle skipped job status in Test Suite Summary
Fixed premature exit in summary job when dependent jobs are skipped.

Problem (GitHub Actions run #21690074019):
- Summary job exited with code 1 after only 6 seconds
- Summary was checking `result != "success"` which matches ANY non-success state
- When Stage 1 jobs fail → Stage 2 jobs (INT/E2E) are SKIPPED (not failed)
- Old logic: Skipped = not success → exit 1 immediately
- Result: Summary reports failure even though jobs were correctly skipped

GitHub Actions Job Results (Possible Values):
- "success": Job completed successfully
- "failure": Job failed
- "skipped": Job skipped due to failed dependencies
- "cancelled": Job manually cancelled

Fix - Result Checking Logic:

BEFORE (Too Strict):
```bash
if [ "${{ needs.unit-tests.result }}" != "success" ]; then
  exit 1  # Exits for failure, skipped, cancelled, or any value
fi
```

AFTER (Precise):
```bash
if [ "${{ needs.unit-tests.result }}" == "failure" ]; then
  echo "❌ Failed"
  exit 1
elif [ "${{ needs.unit-tests.result }}" == "cancelled" ]; then
  echo "⚠️  Cancelled"
  exit 1
fi
# Success or skipped → continue checking other jobs
```

Handling for INT & E2E Jobs:
```bash
if [ "${{ needs.integration-tests.result }}" == "skipped" ]; then
  echo "⏭️  Integration tests skipped (dependencies failed)"
  # Don't exit - this is expected when Stage 1 fails
fi
```

Final Result Logic:
- ✅ If INT and E2E both succeeded → "✅ All tests passed!" (exit 0)
- ⚠️  If INT or E2E skipped → "⚠️  Some tests were skipped" (exit 1)
- ❌ If INT or E2E failed → "❌ Tests failed" (exit 1)

Flow Example (Stage 1 Failure):
1. unit-tests fails → result: "failure"
2. integration-tests & e2e-tests skipped → result: "skipped"
3. Summary job runs:
   - Reports unit-tests failure → exit 1 ✅
   - OR continues to report INT/E2E skipped → exit 1 ✅
4. Summary completes with proper failure indication

Impact:
- ✅ Summary waits for ALL jobs to complete (or skip)
- ✅ Properly reports skipped jo

--- a/.github/workflows/ci-pipeline.yml
+++ b/.github/workflows/ci-pipeline.yml
@@ -940,47 +940,70 @@ jobs:
           fi
 
           # Check for unit tests failure (critical)
-          if [ "${{ needs.unit-tests.result }}" != "success" ]; then
+          if [ "${{ needs.unit-tests.result }}" == "failure" ]; then
             echo ""
             echo "❌ Unit tests failed - subsequent stages skipped"
+            exit 1
+          elif [ "${{ needs.unit-tests.result }}" == "cancelled" ]; then
+            echo ""
+            echo "⚠️  Unit tests cancelled"
             exit 1
           fi
 
           # Check for image build & push failure (critical for integration + E2E)
-          if [ "${{ needs.build-and-push-images.result }}" != "success" ]; then
+          if [ "${{ needs.build-and-push-images.result }}" == "failure" ]; then
             echo ""
             echo "❌ Image builds failed - check individual service builds in the matrix"
             echo "   Services: datastorage, gateway, aianalysis, authwebhook, notification,"
             echo "             remediationorchestrator, signalprocessing, workflowexecution,"
             echo "             holmesgpt-api, mock-llm"
-            echo "   Impact: Integration tests will fall back to local builds (slower)"
+            exit 1
+          elif [ "${{ needs.build-and-push-images.result }}" == "cancelled" ]; then
+            echo ""
+            echo "⚠️  Image builds cancelled"
             exit 1
           fi
 
-          # Check for integration tests failure (matrix job)
-          # Note: integration-tests is a single matrix job that runs 9 services
-          # GitHub Actions reports the matrix job result as a whole (fail-fast: false)
-          if [ "${{ needs.integration-tests.result }}" != "success" ]; then
+          # Check for integration tests (handle skipped if dependencies failed)
+          if [ "${{ needs.integration-tests.result }}" == "failure" ]; then
             echo ""
             echo "❌ Integration tests failed - check individual service logs in the matrix"
             echo "   Services tested: signalprocessing, aianalysis, workflowexecution,"
             echo "                    remediationorchestrator, gateway, datastorage,"
-            echo "                    notification, holmesgpt-api"
+            echo "                    notification, holmesgpt-api, authwebhook"
+            exit 1
+          elif [ "${{ needs.integration-tests.result }}" == "skipped" ]; then
+            echo ""
+            echo "⏭️  Integration tests skipped (dependencies failed)"
+          elif [ "${{ needs.integration-tests.result }}" == "cancelled" ]; then
+            echo ""
+            echo "⚠️  Integration tests cancelled"
             exit 1
           fi
 
-          # Check for E2E tests failure (matrix job)
-          # Note: e2e-tests is a single matrix job that runs 9 services
-          # GitHub Actions reports the matrix job result as a whole (fail-fast: false)
-          if [ "${{ needs.e2e-tests.result }}" != "success" ]; then
+          # Check for E2E tests (handle skipped if dependencies failed)
+          if [ "${{ needs.e2e-tests.result }}" == "failure" ]; then
             echo ""
             echo "❌ E2E tests failed - check individual service logs in the matrix"
             echo "   Services tested: signalprocessing, aianalysis, workflowexecution,"
             echo "                    remediationorchestrator, gateway, datastorage,"
             echo "                    notification, authwebhook, holmesgpt-api"
             exit 1
+          elif [ "${{ needs.e2e-tests.result }}" == "skipped" ]; then
+            echo ""
+            echo "⏭️  E2E tests skipped (dependencies failed)"
+          elif [ "${{ needs.e2e-tests.result }}" == "cancelled" ]; then
+            echo ""
+            echo "⚠️  E2E tests cancelled"
+            exit 1
           fi
 
+          # Final result
           echo ""
-          echo "✅ All tests passed!"
-          exit 0
+          if [ "${{ needs.integration-tests.result }}" == "success" ] && [ "${{ needs.e2e-tests.result }}" == "success" ]; then
+            echo "✅ All tests passed!"
+            exit 0
+          else
+            echo "⚠️  Some tests were skipped or had issues (see above)"
+            exit 1
+          fi
