chore(git): Ignore all files starting with 'coverage'
Added comprehensive coverage file pattern to .gitignore.

Problem:
- Coverage files accumulating in repository (coverage_*.out, coverage_*.txt, etc.)
- Visible in git status and can accidentally be committed
- Example: test/e2e/workflowexecution/coverage_e2e_workflowexecution.out.{3,4,6,7,10,12}

Solution:
- Added catch-all pattern: coverage* (all files/dirs starting with 'coverage')
- Added recursive pattern: **/coverage* (all subdirectories)

What's Now Ignored:
- ✅ coverage*.out (Go coverage profiles)
- ✅ coverage*.txt (Coverage reports)
- ✅ coverage*.html (HTML coverage reports)
- ✅ coverage-reports/ (CI/CD staging directory)
- ✅ coverage_e2e_*.out.* (E2E coverage artifacts)
- ✅ Any other coverage-prefixed files in any directory

Simplified From:
- Removed redundant specific patterns (e2e-coverage*, unit-coverage*, etc.)
- Replaced with single catch-all: coverage*
- More maintainable and comprehensive

Impact:
- ✅ Cleaner git status
- ✅ Prevents accidental commit of coverage artifacts
- ✅ Applies to all directories (root, test/, pkg/, etc.)

--- a/.gitignore
+++ b/.gitignore
@@ -218,14 +218,9 @@ pkg/audit/openapi_spec_data.yaml
 covcounters.*
 covmeta.*
 
-# Coverage report files (all formats and tiers)
-e2e-coverage*
-unit-coverage*
-integration-coverage*
-coverage.html
-coverage.txt
-coverage_*.txt
-coverage_*.out
+# Coverage files and directories (ANY file/directory starting with "coverage")
+coverage*
+**/coverage*
 
 # Coverage directories (all tiers)
 coverage-unit/
